--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <meta name='viewport' content='width=device-width initial-scale=1.0'>
     <title>Keep Wining</title>
     <link rel="stylesheet" href="/style.css" />
+    <link href="toastr.css" rel="stylesheet"/>
+    <script
+    href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"
+  ></script>
     <script defer src="/bundle.js"></script>
   </head>
   <body>
