--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script
       href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"
     ></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <script defer src="/bundle.js"></script>
   </head>
   <body>
