in progress misc styling

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Keep Wining</title>
     <link rel="stylesheet" href="/style.css" />
     <link href="toastr.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet">
     <script
       href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"
     ></script>
