guest checkout fully functional

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>Keep Wining</title>
-    <link rel="stylesheet" href="/style.css" />
     <link href="toastr.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Oswald:300" rel="stylesheet">
-    <script
+    <!-- <script
       href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"
-    ></script>
+    ></script> -->
     <script src="https://js.stripe.com/v3/"></script>
     <script defer src="/bundle.js"></script>
   </head>
